FusionDev Backup1/src/objects/Customer_Group_Price_Book__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>Price_Book__r.IsActive</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Customer Group Price Books</relationshipLabel>
        <relationshipName>Customer_Group_Price_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Group Price Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Group Price Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Group Price Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>